# tezedge

./: .drone.yml  Cargo.toml  docker-compose.distroless.yml  docker-debugger.sh  synchronize_ci.sh
apps/watchdog/: Cargo.toml  docker-compose.deploy.latest.yml
apps/watchdog/src/: display_info.rs
docker/builder/: Dockerfile
docker/distroless/: Dockerfile
docker/run/: Dockerfile
docker/sandbox/: Dockerfile
drone_ci/playbooks/: drone_runner.yml
light_node/: Cargo.toml
light_node/etc/tezedge/: tezedge_drone.config
light_node/src/: main.rs
monitoring/src/: commands.rs  lib.rs  monitor.rs
monitoring/src/handlers/: handler_messages.rs
monitoring/src/listener/: events.rs  mod.rs  player.rs
monitoring/src/monitors/: blocks_monitor.rs
rpc/: Cargo.toml
rpc/src/: helpers.rs  rpc_actor.rs
rpc/src/encoding/: base_types.rs  mod.rs  network.rs
rpc/src/server/: control_msg.rs  dev_handler.rs  handler.rs  mod.rs  service.rs
rpc/tests/: integration_tests.rs
shell/: Cargo.toml
shell/src/: chain_manager.rs  context_listener.rs  lib.rs  mempool_prevalidator.rs  shell_channel.rs
shell/src/monitoring/: Cargo.toml  mod.rs  monitor.rs
shell/src/monitoring/handlers/: handler_messages.rs  ws_handler.rs
shell/src/monitoring/listener/: listener.rs
shell/src/monitoring/monitors/: block_application_monitor.rs  blocks_monitor.rs  bootstrap_monitor.rs  peer_monitor.rs
shell/tests/: context_listener_test.rs
storage/src/: context_storage.rs
storage/src/persistent/: mod.rs  schema.rs
storage/structure/src/: content.rs  lib.rs  skip_list.rs
tezos/interop/: build.rs
tezos/messages/: Cargo.toml
tezos/wrapper/src/: service.rs
tools/: Cargo.toml
tools/src/: lib.rs
(+5 files in other folders)
