[package]
name = "shell"
version = "0.1.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>", "Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"

[dependencies]
dns-lookup = "1.0.1"
failure = "0.1.5"
hex = "0.4.0"
itertools = "0.8.0"
rand = "0.7.2"
riker = { git = "https://github.com/simplestaking/riker.git", branch = "slog-support" }
rocksdb = "0.12.3"
serde = "1.0.102"
serde_json = "1.0.41"
chrono = "0.4"
ws = "*"
tokio = "0.2.0-alpha.6"
erased-serde = "0.3"
slog = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.1.1"
# local dependencies
networking = { path = "../networking" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_encoding = { path = "../tezos/encoding" }
tezos_messages = { path = "../tezos/messages" }
tezos_wrapper = { path = "../tezos/wrapper" }
