[package]
name = "monitoring"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"

[dependencies]



serde = "1.0"
serde_json = "1.0.41"

# local dependencies
networking = { path = "../networking" }
tezos_messages = { path = "../tezos/messages" }
tezos_encoding = { path = "../tezos/encoding" }
